[package]
name = "small"
version = "0.1.0"
authors = ["Robert Cobb <rwcobbjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
libc = "0.2.71"
bytesize = "1.0.1"
textplots = "0.5.1"
