[package]
name = "small"
version = "0.1.0"
authors = ["Robert Cobb <rwcobbjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.3"
bytesize = "1.0.1"
libc = "0.2.71"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
smol_str = { version = "0.1.15", features = ["serde"] }
textplots = "0.5.1"
parse-display = "0.1.2"
smartstring = "0.2.2"
